--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
     flex-direction: column;  
 }
 
-.container-one {
+#section1 {
     padding: 3rem;
     background-color: #1D1842;
 
 }
 
-.nav-menu {
+#nav-menu {
     display: flex;
     justify-content: center;
     gap: 100px;
@@ -26,9 +26,12 @@ body {
     font-size: 18px;
 }
 
-.logo {
-    max-width: 200px; 
-    height: auto;
+
+#text1 {
+    display: flex;
+    flex-direction: column;
+    margin: 200px;
+    color: white;
 
 }
 
@@ -42,7 +45,7 @@ a {
     text-decoration: none;
 }
 
-.container-two {
+#section2 {
     display: flex; 
     padding: 3rem;
 }
@@ -52,12 +55,12 @@ img {
     height: 200px;
 }
 
-.container-three {
+#section3 {
     background-color: #E5E7EB;
     padding: 3rem;
 }
 
-.container-four {
+#section4 {
     padding: 3rem;
 }
 
