--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 #section1 {
-    padding: 3rem;
-    background-color: #1D1842;
+    height: 50vh;
+    background-color: #DDD0C8;
 
 }
 
@@ -22,8 +22,7 @@ body {
     padding: 0;
     margin-top: -200px;
     margin-left: 200px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    
 }
 
 
@@ -31,7 +30,13 @@ body {
     display: flex;
     flex-direction: column;
     margin: 200px;
-    color: white;
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+#logo {
+    
 
 }
 
@@ -41,13 +46,23 @@ body {
 }
 
 a {
-    color: white;
+    color: black;
     text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
 }
 
 #section2 {
     display: flex; 
-    padding: 3rem;
+    align-items: center;
+    background-color: #1D1842;
+    height: 50vh;
+}
+
+.service {
+    display: flex;
+    justify-content: space-around;
+
 }
 
 img {
