--- a/style.css
+++ b/style.css
@@ -5,32 +5,48 @@ body {
 
 .flexbox-container {
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
+    flex: 1 1 0;  
+    background-color: #DDD0C8;
 }
 
-#section1 {
+#section2 {
     height: 50vh;
     background-color: #DDD0C8;
 
 }
 
-#nav-menu {
+#navbar {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 50px;
+    position: fixed;
     list-style: none;
     padding: 0;
     margin-top: -200px;
-    margin-left: 200px;
+    margin-left: 450px;
     
 }
 
+#navbar a {
+    color: #323232;
+    display: block;
+    text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    padding: 14px 16px;
+}
+
+#navbar a:hover {
+    background: #ddd;
+    color: black;
+}
 
 #text1 {
     display: flex;
     flex-direction: column;
     margin: 200px;
-    color: black;
+    color: #323232;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
@@ -45,17 +61,11 @@ body {
     height: 300px;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-}
 
-#section2 {
+
+#section3 {
     display: flex; 
     align-items: center;
-    background-color: #1D1842;
     height: 50vh;
 }
 
@@ -70,12 +80,11 @@ img {
     height: 200px;
 }
 
-#section3 {
-    background-color: #E5E7EB;
+#section4 {
     padding: 3rem;
 }
 
-#section4 {
+#section5 {
     padding: 3rem;
 }
 
