--- a/style.css
+++ b/style.css
@@ -1,96 +1,34 @@
 body {
-    margin: 0; 
+    background-color: #71797E;
+    margin: 0;
     padding: 0;
 }
 
-.flexbox-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 0;  
-    background-color: #DDD0C8;
-}
-
-#section2 {
-    height: 50vh;
-    background-color: #DDD0C8;
-
-}
-
-#navbar {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    position: fixed;
-    list-style: none;
+.header-main {
+    width: 100%;
+    height: 60px;
+    background-color:#E5E4E2 ;
+    margin: 0;
     padding: 0;
-    margin-top: -200px;
-    margin-left: 450px;
-    
 }
 
-#navbar a {
-    color: #323232;
-    display: block;
-    text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-    padding: 14px 16px;
+.header-main-logo {
+    width: 120px;
+    height: auto;
+    background-color: yellow;
 }
 
-#navbar a:hover {
-    background: #ddd;
-    color: black;
-}
-
-#text1 {
-    display: flex;
-    flex-direction: column;
-    margin: 200px;
-    color: #323232;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.header-main-nav {
+    width: 120px;
+    height: auto;
+    background-color: red;
 
 }
 
-#logo {
-    
 
-}
-
-.img-1 {
-    max-width: auto;
-    height: 300px;
-}
-
-
-
-#section3 {
-    display: flex; 
-    align-items: center;
-    height: 50vh;
-}
-
-.service {
-    display: flex;
-    justify-content: space-around;
-
-}
-
-img {
-    max-width: 200px;
-    height: 200px;
-}
-
-#section4 {
-    padding: 3rem;
-}
-
-#section5 {
-    padding: 3rem;
-}
 
 footer {
     background-color: #1f2937;
     color: white;
-    padding: 4em;
     text-align: center;
 }
