--- a/style.css
+++ b/style.css
@@ -1,5 +1,68 @@
+body {
+    height: 100vh;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+    font-family: Roboto, sans-serif;
+}
+
+.header {
+    background-color: #1F2937;
+}
+
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.left-links {
+    display: flex;
+    text-align: left;
+    font-size: 24px;
+}
+
+.left-links a {
+    color: #F9FAF8
+}
+
+.right-links {
+    display: flex;
+    text-align: right;
+    font-size: 18px;
+    gap: 50px;
+}
+
+.right-links a {
+    color: #E5E7EB;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+#footer {
+    background-color: #1F2937;
+}
+
+
+
+
+
+
 .image-placeholder {
     width: 200px;
     height: 200px;
     background-color: #a83a3a;
     border: 2px dashed #ccc;
+}
