--- a/style.css
+++ b/style.css
@@ -106,6 +106,25 @@ h1 {
     margin: 60px;
 }
 
+h2 {
+text-align: center;
+
+}
+
+.container2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.image-placeholder2 {
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
+
+}
 
 
 
